--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <script src="./lib/phaser.min.js"></script>
     <script src="./src/Prefabs/Rocket.js"></script>
+    <script src="./src/Prefabs/Rocket2.js"></script>
     <script src="./src/Prefabs/Spaceship.js"></script>
     <script src="./src/Scenes/Menu.js"></script>
     <script src="./src/Scenes/Play.js"></script>
